@startuml 04-полный-пример
!theme plain
title Шаг 4 — Полный пример: User + Workspace + WorkspaceMember

skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0

enum Role {
  OWNER
  ADMIN
  MEMBER
  VIEWER
}

class User {
  + id : UUID
  + email : text
  + name : text
  + createdAt : DateTime
}

class Workspace {
  + id : UUID
  + name : text
  + slug : text
  + plan : text
  + createdAt : DateTime
}

class WorkspaceMember {
  + role : Role
  + joinedAt : DateTime
}

User "1" -- "0..*" WorkspaceMember : > has membership
Workspace "1" -- "1..*" WorkspaceMember : > contains

note top of WorkspaceMember
  <b>WorkspaceMember</b> — особый класс: "связующий".
  Он соединяет User и Workspace в отношении "многие-ко-многим":
  один user может быть в нескольких workspace,
  один workspace может содержать много user.

  У самой связи есть <b>дополнительные данные</b>:
  <b>role</b> (owner/admin/member/viewer) и <b>joinedAt</b>.
  Они не могут храниться ни в User, ни в Workspace —
  потому что относятся к <i>конкретной паре</i>.

  В БД это таблица с композитным первичным ключом:
  <code>PRIMARY KEY (workspace_id, user_id)</code>.
end note

note bottom of Role
  <b>Enum (перечисление)</b> — список допустимых значений
  для поля Role. Поле role в WorkspaceMember
  может быть ТОЛЬКО одним из этих 4-х.

  В БД реализуется как <b>TEXT CHECK IN (...)</b>
  или как отдельный тип PostgreSQL.
end note

note right of User
  Пример:
  <b>User A</b> создал <b>Workspace X</b> и стал там <b>owner</b>
  (WorkspaceMember: A, X, OWNER).

  <b>User A</b> также присоединился к <b>Workspace Y</b>
  как <b>member</b> (WorkspaceMember: A, Y, MEMBER).

  <b>User B</b> — в <b>Workspace X</b> как <b>admin</b>
  (WorkspaceMember: B, X, ADMIN).

  Для "A в X" и "A в Y" — <b>две разные записи</b>
  WorkspaceMember с разными ролями.
end note

@enduml
